--- a/src/app.css
+++ b/src/app.css
@@ -164,6 +164,7 @@ header {
   z-index: 20;
   transition: all 500ms;
   box-shadow: 6px 6px 9px #dee1e5, -6px -6px 9px #ffffff;
+  height: 55px;
 }
 
 header h2 {
@@ -174,19 +175,19 @@ header label span {
   cursor: pointer;
 }
 
-.search-wrapper {
+/* .search-wrapper {
   border: 1px solid #ccc;
   border-radius: 30px;
   height: 50px;
   display: flex;
   align-items: center;
   overflow-x: hidden;
-}
-.search-wrapper span {
+} */
+/* .search-wrapper span {
   display: inline-block;
   padding: 0rem 1rem;
   font-size: 1.5rem;
-}
+} */
 .search-wrapper input {
   height: 100%;
   padding: 0.5rem;
@@ -206,7 +207,7 @@ header label span {
   color: var(--text-grey);
 }
 main {
-  margin-top: 70px;
+  margin-top: 40px;
   padding: 2rem 1rem;
   background: #f1f5f9;
   min-height: calc(100vh-90px);
